// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview should not render the Activate Analytics CTA when the Analytics module is not available 1`] = `
<div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-phone"
          >
            <div
              aria-label="Total Impressions"
              aria-pressed="true"
              class="googlesitekit-data-block googlesitekit-data-block--impressions googlesitekit-data-block--button-1 googlesitekit-data-block--button googlesitekit-data-block--selected"
              role="button"
              tabindex="0"
            >
              <div
                class="googlesitekit-data-block__title-datapoint-wrapper"
              >
                <h3
                  class="googlesitekit-typography  googlesitekit-subheading-1 googlesitekit-data-block__title  googlesitekit-typography--title googlesitekit-typography--small"
                >
                  <span
                    class="googlesitekit-data-block__title-inner"
                  >
                    Total Impressions
                  </span>
                </h3>
                <div
                  class="googlesitekit-data-block__datapoint"
                >
                  <span
                    class="googlesitekit-data-block__datapoint--resize"
                  >
                    7.9K
                  </span>
                </div>
              </div>
              <div
                class="googlesitekit-data-block__change-source-wrapper"
              >
                <div
                  class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
                >
                  <span
                    class="googlesitekit-data-block__value"
                  >
                    0%
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-phone"
          >
            <div
              aria-label="Total Clicks"
              aria-pressed="false"
              class="googlesitekit-data-block googlesitekit-data-block--clicks googlesitekit-data-block--button-2 googlesitekit-data-block--button"
              role="button"
              tabindex="0"
            >
              <div
                class="googlesitekit-data-block__title-datapoint-wrapper"
              >
                <h3
                  class="googlesitekit-typography  googlesitekit-subheading-1 googlesitekit-data-block__title  googlesitekit-typography--title googlesitekit-typography--small"
                >
                  <span
                    class="googlesitekit-data-block__title-inner"
                  >
                    Total Clicks
                  </span>
                </h3>
                <div
                  class="googlesitekit-data-block__datapoint"
                >
                  <span
                    class="googlesitekit-data-block__datapoint--resize"
                  >
                    123
                  </span>
                </div>
              </div>
              <div
                class="googlesitekit-data-block__change-source-wrapper"
              >
                <div
                  class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
                >
                  <span
                    class="googlesitekit-data-block__value"
                  >
                    0%
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Overview should render the Search Funnel Overview, including the Activate Analytics CTA 1`] = `
<div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-phone"
          >
            <div
              aria-label="Total Impressions"
              aria-pressed="true"
              class="googlesitekit-data-block googlesitekit-data-block--impressions googlesitekit-data-block--button-1 googlesitekit-data-block--button googlesitekit-data-block--selected"
              role="button"
              tabindex="0"
            >
              <div
                class="googlesitekit-data-block__title-datapoint-wrapper"
              >
                <h3
                  class="googlesitekit-typography  googlesitekit-subheading-1 googlesitekit-data-block__title  googlesitekit-typography--title googlesitekit-typography--small"
                >
                  <span
                    class="googlesitekit-data-block__title-inner"
                  >
                    Total Impressions
                  </span>
                </h3>
                <div
                  class="googlesitekit-data-block__datapoint"
                >
                  <span
                    class="googlesitekit-data-block__datapoint--resize"
                  >
                    7.9K
                  </span>
                </div>
              </div>
              <div
                class="googlesitekit-data-block__change-source-wrapper"
              >
                <div
                  class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
                >
                  <span
                    class="googlesitekit-data-block__value"
                  >
                    0%
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-2-phone"
          >
            <div
              aria-label="Total Clicks"
              aria-pressed="false"
              class="googlesitekit-data-block googlesitekit-data-block--clicks googlesitekit-data-block--button-2 googlesitekit-data-block--button"
              role="button"
              tabindex="0"
            >
              <div
                class="googlesitekit-data-block__title-datapoint-wrapper"
              >
                <h3
                  class="googlesitekit-typography  googlesitekit-subheading-1 googlesitekit-data-block__title  googlesitekit-typography--title googlesitekit-typography--small"
                >
                  <span
                    class="googlesitekit-data-block__title-inner"
                  >
                    Total Clicks
                  </span>
                </h3>
                <div
                  class="googlesitekit-data-block__datapoint"
                >
                  <span
                    class="googlesitekit-data-block__datapoint--resize"
                  >
                    123
                  </span>
                </div>
              </div>
              <div
                class="googlesitekit-data-block__change-source-wrapper"
              >
                <div
                  class="googlesitekit-data-block__change googlesitekit-data-block__change--no-change"
                >
                  <span
                    class="googlesitekit-data-block__value"
                  >
                    0%
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone"
      >
        <div
          class="googlesitekit-activate-analytics-cta"
        >
          <div
            class="googlesitekit-activate-analytics-cta__top"
          >
            <div
              class="googlesitekit-activate-analytics-cta__icon"
            >
              <svg />
            </div>
            <p
              class="googlesitekit-activate-analytics-cta__description"
            >
              See how many people visit your site from Search and track how you’re achieving your goals. 
              <a
                aria-label="Learn more (opens in a new tab)"
                class="googlesitekit-cta-link"
                href="https://sitekit.withgoogle.com/support/?doc=ga4"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Learn more
                </span>
                <span
                  class="googlesitekit-icon-wrapper"
                  style="margin-left: 5px;"
                >
                  <svg />
                </span>
              </a>
            </p>
          </div>
          <div
            class="googlesitekit-activate-analytics-cta__actions"
          >
            <button
              class="mdc-button googlesitekit-activate-analytics-cta__button--secondary mdc-button--tertiary"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Maybe later
              </span>
            </button>
            <button
              class="mdc-button googlesitekit-activate-analytics-cta__button--primary googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
              target="_self"
            >
              <span
                class="mdc-button__label"
              >
                Set up Analytics
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
